# fabrikav2

./: .gitattributes  .gitignore  AGENTS.md  CONCEPTS.md  FIXES.md  GOAL_CAMELEON.md  GOAL_PORTS.md  GOAL_PROMPT.md  goal.md  knip.json  node_modules  package-lock.json  package.json
tools/ftd-level-editor/: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  eslint.config.js  openapi.json  package.json  pyproject.toml
tools/ftd-level-editor/backend/ftd_editor/: __init__.py  app.py  approvals.py  artifacts.py  bundles.py  contracts.py  cutover.py  fs.py  rehearsal.py  schema_codegen.py  security.py  settings.py
tools/ftd-level-editor/cutover/: legacy-archive.schema.json
tools/ftd-level-editor/deploy/: com.appletolye.ftd-editor-rehearsal.plist  install-rehearsal.sh  run-installed-rehearsal.sh
tools/ftd-level-editor/scripts/: generate_contracts.py  generate_level_schema.py  live_reliability_server.py  rehearse_cutover.py  run_rehearsal.py  verify_public_levels.py
tools/ftd-level-editor/tests/: conftest.py
tools/ftd-level-editor/tests/contracts/: test_action_parity.py  test_app_isolation.py  test_approval_grants.py  test_atomic_publication.py  test_bundle_recovery.py  test_catalog_sequence.py  test_cutover_rehearsal.py  test_execution_spec.py  test_import_boundaries.py  test_job_artifacts.py  test_job_cancellation.py  test_job_contract.py  test_job_recovery.py  test_job_request_identity.py  test_legacy_census.py  test_legacy_identity.py  (+24 more)
tools/ftd-level-editor/ui/: index.html  tsconfig.json  vite.config.ts
tools/ftd-level-editor/v1-port/: run-backend.sh
(+5684 files in other folders)
